tests/elab/errors/unification/non_local_fun_app.snapshot
exit status: 1

stdout = """
def error: fun(A: Type) -> (A -> ?3(A, Unnamed(0))) -> A = fun(A: Type, a: fun(a: A) -> ?3(A, a)) => #error;
types of expressions:
11..38 = Type
19..20 = Type
25..33 = Type
25..38 = Type
26..27 = Type
31..32 = Type
37..38 = Type
43..67 = fun(A: Type) -> (fun(a: A) -> ?3(A, a)) -> A
53..67 = (fun(a: Unbound(0)) -> ?3(Unbound(1), a)) -> Unbound(1)
63..64 = fun(a: Unbound(1)) -> ?3(Unbound(2), a)
63..67 = Unbound(1)
65..66 = Unbound(1)
types of patterns:
15..16 = ?1
47..48 = Type
57..58 = fun(a: Unbound(0)) -> ?3(Unbound(1), a)
metavars:
?0 = Type
?1 = Type
?2 = fun(_: #error, _: #error) => Type
?3 = <unsolved>
?4 = fun(a: #error, _: #error) => a
?5 = <unsolved>
"""

stderr = """
error: application in problem spine was not a local variable
  ┌─ tests/elab/errors/unification/non_local_fun_app.pion:2:25
  │
2 │   = fun(A) => fun(a) => a(_);
  │                         ^^^^

error: unable to infer expression to solve hole
  ┌─ tests/elab/errors/unification/non_local_fun_app.pion:1:32
  │
1 │ def error: fun(A : _) -> (A -> _) -> A
  │                                ^

error: unable to infer expression to solve hole
  ┌─ tests/elab/errors/unification/non_local_fun_app.pion:2:27
  │
2 │   = fun(A) => fun(a) => a(_);
  │                           ^

aborting due to 3 previous errors
"""
